add enter button, add RestApi for server side

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Github Search Engine</title>
     <!-- Required meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- defer makes sure to not load the index.js till dom is loaded -->
+    <!-- TODO , ask solange if ok. defer makes sure to not load the index.js till dom is loaded -->
     <script type="text/javascript" src="javascripts/index.js" defer></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
